--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,40 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: 'Proxima Nova Bold';
+  src: local('Proxima Nova Bold'), url('./fonts/Proxima Nova Bold.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Proxima Nova Regular';
+  src: local('Proxima Nova Regular'), url('./fonts/Proxima Nova Regular.ttf') format('truetype');
+}
+
+.boldtext {
+  font-family: 'Proxima Nova Bold';
+}
+
+.regtext {
+  font-family: 'Proxima Nova Regular';
+}
+
+::placeholder{
+  font-family: 'Proxima Nova Regular';
+  font-size: 16px;
+}
+
+button {
+  font-family: 'Proxima Nova Bold';
+  font-size: 16px;
+}
+
+textarea {
+  font-family: 'Proxima Nova Regular';
+  font-size: 16px;
+}
+
+br {
+  clear: both;
+}
